[workspace]
resolver = "3"
members = ["sitelen-ilo", "sitelen-ilo-macros"]
default-members = ["sitelen-ilo"]

[workspace.dependencies]
arrayvec = "0.7.6"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = { version = "0.4.28", features = ["std"] }
nom = "8.0.0"
nom_locate = "5.0.0"
phf = { version = "0.13.1", features = ["macros"] }

sitelen-ilo-macros = { path = "./sitelen-ilo-macros" }